--- a/pom.xml
+++ b/pom.xml
@@ -5,14 +5,14 @@
     <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>2.5.0</version>
+      <version>2.5.1</version>
       <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>me.yogendra.samples.springboot</groupId>
-    <artifactId>tracing</artifactId>
+    <groupId>com.example</groupId>
+    <artifactId>root</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
-
+    
     <modules>
     	<module>catalog</module>
     	<module>store</module>
