Store application added

--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -1,1 +1,4 @@
+spring.application.name=store
+wavefront.application.name=console-availability
+management.metrics.export.wavefront.source=dev-workstation
 
