expose all endpoint

--- a/store/src/main/resources/application.properties
+++ b/store/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=store
 wavefront.application.name=console-availability
 management.metrics.export.wavefront.source=dev-workstation
 
+management.endpoints.web.exposure.include=*
