--- a/catalog/src/main/resources/application.properties
+++ b/catalog/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=catalog
 server.port=8083
 wavefront.application.name=console-availability
 management.metrics.export.wavefront.source=dev-workstation
+management.endpoints.web.exposure.include=*
